# django-aws-utils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-ide.txt  requirements.in  requirements.txt  setup.cfg
django_aws_utils/: __init__.py  ec2_ip.py  secrets_manager.py
docs/: conf.py  index.rst
docs/source/: django_aws_utils.rst  modules.rst
