[metadata]
license_file = LICENSE
name = django-aws-utils
author = Vlad Vasiliu
author_email = code@vladvasiliu.com
description = Helpers for deploying Django on AWS
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/vladvasiliu/django-aws-utils
project_urls =
    Source = https://github.com/vladvasiliu/django-aws-utils
    Documentation = http://django-aws-utils.rtfd.io/
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    django_aws_utils
python_requires = >= 3.6
install_requires =
    boto3
    django
    requests
